--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "julia.environmentPath": "c:\\Users\\lucas\\Documents\\code\\julia_learning\\env_learning"
+  "julia.environmentPath": "c:\\Users\\lucas\\Desktop\\code\\Julia\\julia_learning\\env_learning"
 }
